--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,23 @@
-org.gradle.daemon=true
+## Project-wide Gradle settings.
+#
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Mon Sep 11 11:28:10 EDT 2017
+systemProp.http.proxyPassword=St3v3456
+systemProp.http.proxyHost=iproxyweb03.snapon.com
+systemProp.http.nonProxyHosts=*.localhost;*.snapon.com;10.*.*.*;183.*.*.*;192.168.*.*;*.bahco.com;*.snaponcredit.com;*.equiserv.com;i*.e
 org.gradle.jvmargs=-Xms128m -Xmx1500m
+org.gradle.daemon=true
 org.gradle.configureondemand=true
+systemProp.http.proxyUser=moenssr
+systemProp.http.proxyPort=8080
