--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -13,6 +13,7 @@
             android:name="com.smoftware.elmour.AndroidLauncher"
             android:label="@string/app_name" 
             android:screenOrientation="sensorLandscape"
+            android:resizeableActivity="false"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
